test/compile_errors/err_numeric_separator_before_suffix_hex.w
//! expect-error: numeric separator '_' may not precede the type suffix

fn main:
    let _ = 0xFF_FF_u32
